List.of() -> Arrays.asList()